--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -48,6 +49,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
+      "echo 'Linting files'",
       "eslint --fix",
       "prettier --write",
       "git add"
