chore: :art: configure code format tools
- extract package.json config in rc (run command) file. e.g ".prettierrc"
- write rc files into yaml

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,21 @@
-{
-  "root": true,
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react-hooks/recommended",
-    "react-app",
-    "prettier"
-  ],
-  "ignorePatterns": ["dist", ".eslintrc.cjs"],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["react-refresh", "prettier"],
-  "rules": {
-    "react-refresh/only-export-components": [
-      "warn",
-      { "allowConstantExport": true }
-    ],
-    "prettier/prettier": "error"
-  }
-}
+root: true
+env:
+  browser: true
+  es2020: true
+extends:
+  - eslint:recommended
+  - plugin:react-hooks/recommended
+  - react-app
+  - prettier
+ignorePatterns:
+  - dist
+  - .eslintrc.cjs
+parser: "@typescript-eslint/parser"
+plugins:
+  - react-refresh
+  - prettier
+rules:
+  react-refresh/only-export-components:
+    - warn
+    - allowConstantExport: true
+  prettier/prettier: error
