--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,8 @@
-{
-  "semi": false,
-  "singleQuote": true,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "useTabs": false,
-  "trailingComma": "es5",
-  "jsxBracketSameLine": false,
-  "experimentalTernaries": true
-}
+semi: false
+singleQuote: true
+printWidth: 80
+tabWidth: 2
+useTabs: false
+trailingComma: es5
+jsxBracketSameLine: false
+experimentalTernaries: true
