--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,28 @@
 version: '3.8'
 
 services:
-  web:
+  web1:
     build: .
-    ports:
-      - '8080:80'
     environment:
       - NODE_ENV=production
     volumes:
       - .:/app
       - /app/node_modules
+
+  web2:
+    build: .
+    environment:
+      - NODE_ENV=production
+    volumes:
+      - .:/app
+      - /app/node_modules
+
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - '80:80'
+    depends_on:
+      - web1
+      - web2
